[feat] Toast Container 공통 컴포넌트 생성
- App 하위에 Toast Container render
- 위에서 아래로 가운데 출력되도록 global.css에 추가

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -150,3 +150,18 @@ textarea {
   user-select: text;
   -webkit-user-select: text;
 }
+
+@keyframes slide-down {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.animate-slide-down {
+  animation: slide-down 0.3s ease-out;
+}
