[refactor] 이미지, 영상 렌더링 성능 개선 - 이미지/영상 렌더 시 느림, 끊김 이슈 - GIF > MP4(720P)로 변경하여 크기 10배 개선(76GB > 7.6GB)    - video 태그는 loop가 가능하여 크기 더 작아짐    - 추후, webp로 변환, store 관리를 통한 앱 마운트 시 비디오 로딩    - 현재는 빠른 렌더를 위한 GPU 사용 속성 적용 - 이미지 추출 3배 > 1배로 변경    - 파일당 약 5배 개선(약 31kb > 6kb)    - 일부 이미지 약간 깨지는 문제 존재

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -165,3 +165,8 @@ textarea {
 .animate-slide-down {
   animation: slide-down 0.3s ease-out;
 }
+
+video {
+  transform: translateZ(0); /* 하드웨어 가속 유도 */
+  will-change: transform;
+}
