--- a/src/style/global.css
+++ b/src/style/global.css
@@ -165,3 +165,44 @@ textarea {
 .animate-slide-down {
   animation: slide-down 0.3s ease-out;
 }
+
+video {
+  transform: translateZ(0); /* 하드웨어 가속 유도 */
+  will-change: transform;
+}
+
+.eco-dot {
+  width: 4px;
+  height: 4px;
+  margin-right: 0.5px;
+  background-color: #000;
+  border-radius: 50%;
+  display: inline-block;
+  animation: ecoTyping 1.2s infinite ease-in-out;
+}
+
+.eco-dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.eco-dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes ecoTyping {
+  0% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+  40% {
+    transform: translateY(-4px);
+    opacity: 1;
+  }
+  80% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 0.5;
+  }
+}
